@@ -12,16 +12,19 @@ if($^O eq 'darwin') {
 }
 
 WriteMakefile(
-	NAME	 => 'Bluesky::Poster',
+	NAME => 'Bluesky::Poster',
+	AUTHOR => q{Nigel Horne <njh@nigelhorne.com>},
+	ABSTRACT_FROM => 'lib/Bluesky/Poster.pm',
 	VERSION_FROM => 'lib/Bluesky/Poster.pm',
-	ABSTRACT => 'Simple interface for posting to Bluesky (AT Protocol)',
-	AUTHOR => 'Nigel Horne',
 	LICENSE => 'GPL',
 	PREREQ_PM => {
+		'Carp' => 0,
 		'LWP::UserAgent' => 0,
 		'JSON::MaybeXS' => 0,
-		'URI'		 => 0,
-		'Carp' => 0,
+		'Object::Configure' => 0,
+		'Params::Validate::Strict' => 0,
+		'Params::Get' => 0,
+		'URI' => 0,
 	}, TEST_REQUIRES => {
 		'Test::DescribeMe' => 0,
 		'Test::Most' => 0,
